aws/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2 Instance for REST API WebServer

Parameters:
  LatestAmiId:
    Description: Latest Amazon Linux 2 AMI
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  InstanceType:
    Description: REST API WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    ConstraintDescription: must be a valid EC2 instance type

  IP:
    Description: IP address in CIDR format
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '^(\d{1,3}\.){3}\d{1,3}\/\d{1,2}$'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x

Resources:
  KeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: main
      KeyType: ed25519

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP access via my IP address
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref IP
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref IP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref IP

  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref SecurityGroup
      KeyName: !Ref KeyPair
      Tags:
        - Key: Name
          Value: rest_api
      UserData: !Base64 |
        #!/bin/sh
        sudo yum update -y
        sudo yum install -y docker
        sudo systemctl start docker.service
        echo "set relativenumber" >> ~/.vimrc
        echo "set shiftwidth=4" >> ~/.vimrc
        echo "set tabstop=4" >> ~/.vimrc
        sudo curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-linux-$(uname -m) -o /usr/bin/docker-compose && sudo chmod 755 /usr/bin/docker-compose && docker-compose --version
